tests/ui/nll/closure-requirements/propagate-approximated-val.stderr
note: external requirements
  --> $DIR/propagate-approximated-val.rs:36:45
   |
LL |     establish_relationships(cell_a, cell_b, |outlives1, outlives2, x, y| {
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: test::{closure#0} with closure args [
               i16,
               for<Region(BrAnon(None)), Region(BrAnon(None))> extern "rust-call" fn((std::cell::Cell<&'?1 &ReLateBound(DebruijnIndex(0), BoundRegion { var: 0, kind: BrAnon(None) }) u32>, std::cell::Cell<&ReLateBound(DebruijnIndex(0), BoundRegion { var: 1, kind: BrAnon(None) }) &'?2 u32>, std::cell::Cell<&ReLateBound(DebruijnIndex(0), BoundRegion { var: 0, kind: BrAnon(None) }) u32>, std::cell::Cell<&ReLateBound(DebruijnIndex(0), BoundRegion { var: 1, kind: BrAnon(None) }) u32>)),
               (),
           ]
   = note: late-bound region is '?3
   = note: late-bound region is '?4
   = note: number of external vids: 5
   = note: where '?1: '?2

note: no external requirements
  --> $DIR/propagate-approximated-val.rs:35:1
   |
LL | fn test<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: test

error: lifetime may not live long enough
  --> $DIR/propagate-approximated-val.rs:38:9
   |
LL | fn test<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
   |         --  -- lifetime `'b` defined here
   |         |
   |         lifetime `'a` defined here
...
LL |         demand_y(outlives1, outlives2, x.get())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'a` must outlive `'b`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to previous error

